[gd_scene load_steps=6 format=2]

[ext_resource path="res://Recursos/Fuentes/CutiveMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Recursos/Temas/default.tres" type="Theme" id=2]
[ext_resource path="res://UiScene/Script/GameSelection.gd" type="Script" id=3]
[ext_resource path="res://Recursos/Iconos/eliminar.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0.164706, 0.176471, 0.227451, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -2433, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.356863, 0.32549, 0.501961, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 715.0
margin_bottom = 1507.0

[node name="Titulo" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 710.0
margin_bottom = 43.0
theme = ExtResource( 2 )
text = "Contador De Victorias"
align = 1
valign = 1

[node name="Subtitulo Juego" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 710.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 1 )
text = "Selecci√≥n de Juego"
align = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 710.0
margin_bottom = 89.0

[node name="eliminarTodos" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 610.0
margin_top = 93.0
margin_right = 710.0
margin_bottom = 193.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 8
icon = ExtResource( 4 )
expand_icon = true

[node name="boxFull" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 197.0
margin_right = 710.0
margin_bottom = 1398.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="container Juego" type="GridContainer" parent="MarginContainer/VBoxContainer/boxFull"]
margin_left = 20.0
margin_top = 20.0
margin_right = 690.0
margin_bottom = 1181.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 1402.0
margin_right = 710.0
margin_bottom = 1502.0
size_flags_vertical = 9

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 710.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="AgregarJuegoBoton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 708.0
margin_bottom = 98.0
size_flags_vertical = 5
text = "Agregar Juego"

[connection signal="pressed" from="MarginContainer/VBoxContainer/eliminarTodos" to="." method="_on_eliminarTodos_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/AgregarJuegoBoton" to="." method="_on_AgregarJuegoBoton_pressed"]
